Tarefa_3/build/log/idf_py_stdout_output_12057
[1/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/test_tasks/wheel_task.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/test_tasks/wheel_task.c.obj 
/usr/lib/sdk/esp-idf/tools/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"HEAD-HASH-NOTFOUND\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/var/home/aluno/workspace/blink/build/config -I/var/home/aluno/workspace/blink/main -I/var/home/aluno/workspace/blink/main/test_tasks -I/usr/lib/sdk/esp-idf/idf/components/newlib/platform_include -I/usr/lib/sdk/esp-idf/idf/components/freertos/config/include -I/usr/lib/sdk/esp-idf/idf/components/freertos/config/include/freertos -I/usr/lib/sdk/esp-idf/idf/components/freertos/config/xtensa/include -I/usr/lib/sdk/esp-idf/idf/components/freertos/FreeRTOS-Kernel/include -I/usr/lib/sdk/esp-idf/idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/usr/lib/sdk/esp-idf/idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/usr/lib/sdk/esp-idf/idf/components/freertos/esp_additions/include -I/usr/lib/sdk/esp-idf/idf/components/esp_hw_support/include -I/usr/lib/sdk/esp-idf/idf/components/esp_hw_support/include/soc -I/usr/lib/sdk/esp-idf/idf/components/esp_hw_support/include/soc/esp32s3 -I/usr/lib/sdk/esp-idf/idf/components/esp_hw_support/port/esp32s3/. -I/usr/lib/sdk/esp-idf/idf/components/heap/include -I/usr/lib/sdk/esp-idf/idf/components/log/include -I/usr/lib/sdk/esp-idf/idf/components/soc/include -I/usr/lib/sdk/esp-idf/idf/components/soc/esp32s3 -I/usr/lib/sdk/esp-idf/idf/components/soc/esp32s3/include -I/usr/lib/sdk/esp-idf/idf/components/hal/platform_port/include -I/usr/lib/sdk/esp-idf/idf/components/hal/esp32s3/include -I/usr/lib/sdk/esp-idf/idf/components/hal/include -I/usr/lib/sdk/esp-idf/idf/components/esp_rom/include -I/usr/lib/sdk/esp-idf/idf/components/esp_rom/include/esp32s3 -I/usr/lib/sdk/esp-idf/idf/components/esp_rom/esp32s3 -I/usr/lib/sdk/esp-idf/idf/components/esp_common/include -I/usr/lib/sdk/esp-idf/idf/components/esp_system/include -I/usr/lib/sdk/esp-idf/idf/components/esp_system/port/soc -I/usr/lib/sdk/esp-idf/idf/components/esp_system/port/include/private -I/usr/lib/sdk/esp-idf/idf/components/xtensa/esp32s3/include -I/usr/lib/sdk/esp-idf/idf/components/xtensa/include -I/usr/lib/sdk/esp-idf/idf/components/xtensa/deprecated_include -I/usr/lib/sdk/esp-idf/idf/components/lwip/include -I/usr/lib/sdk/esp-idf/idf/components/lwip/include/apps -I/usr/lib/sdk/esp-idf/idf/components/lwip/include/apps/sntp -I/usr/lib/sdk/esp-idf/idf/components/lwip/lwip/src/include -I/usr/lib/sdk/esp-idf/idf/components/lwip/port/include -I/usr/lib/sdk/esp-idf/idf/components/lwip/port/freertos/include -I/usr/lib/sdk/esp-idf/idf/components/lwip/port/esp32xx/include -I/usr/lib/sdk/esp-idf/idf/components/lwip/port/esp32xx/include/arch -I/usr/lib/sdk/esp-idf/idf/components/lwip/port/esp32xx/include/sys -I/var/home/aluno/workspace/blink/managed_components/espressif__bdc_motor/include -I/var/home/aluno/workspace/blink/managed_components/espressif__bdc_motor/interface -I/usr/lib/sdk/esp-idf/idf/components/driver/include -I/usr/lib/sdk/esp-idf/idf/components/driver/deprecated -I/usr/lib/sdk/esp-idf/idf/components/driver/analog_comparator/include -I/usr/lib/sdk/esp-idf/idf/components/driver/dac/include -I/usr/lib/sdk/esp-idf/idf/components/driver/gpio/include -I/usr/lib/sdk/esp-idf/idf/components/driver/gptimer/include -I/usr/lib/sdk/esp-idf/idf/components/driver/i2c/include -I/usr/lib/sdk/esp-idf/idf/components/driver/i2s/include -I/usr/lib/sdk/esp-idf/idf/components/driver/ledc/include -I/usr/lib/sdk/esp-idf/idf/components/driver/mcpwm/include -I/usr/lib/sdk/esp-idf/idf/components/driver/parlio/include -I/usr/lib/sdk/esp-idf/idf/components/driver/pcnt/include -I/usr/lib/sdk/esp-idf/idf/components/driver/rmt/include -I/usr/lib/sdk/esp-idf/idf/components/driver/sdio_slave/include -I/usr/lib/sdk/esp-idf/idf/components/driver/sdmmc/include -I/usr/lib/sdk/esp-idf/idf/components/driver/sigma_delta/include -I/usr/lib/sdk/esp-idf/idf/components/driver/spi/include -I/usr/lib/sdk/esp-idf/idf/components/driver/temperature_sensor/include -I/usr/lib/sdk/esp-idf/idf/components/driver/touch_sensor/include -I/usr/lib/sdk/esp-idf/idf/components/driver/twai/include -I/usr/lib/sdk/esp-idf/idf/components/driver/uart/include -I/usr/lib/sdk/esp-idf/idf/components/driver/usb_serial_jtag/include -I/usr/lib/sdk/esp-idf/idf/components/driver/touch_sensor/esp32s3/include -I/usr/lib/sdk/esp-idf/idf/components/esp_pm/include -I/usr/lib/sdk/esp-idf/idf/components/esp_ringbuf/include -I/usr/lib/sdk/esp-idf/idf/components/esp_adc/include -I/usr/lib/sdk/esp-idf/idf/components/esp_adc/interface -I/usr/lib/sdk/esp-idf/idf/components/esp_adc/esp32s3/include -I/usr/lib/sdk/esp-idf/idf/components/esp_adc/deprecated/include -I/usr/lib/sdk/esp-idf/idf/components/esp_timer/include -I/var/home/aluno/workspace/blink/managed_components/espressif__pid_ctrl/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/var/home/aluno/workspace/blink=. -fmacro-prefix-map=/usr/lib/sdk/esp-idf/idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/test_tasks/wheel_task.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/test_tasks/wheel_task.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/test_tasks/wheel_task.c.obj -c /var/home/aluno/workspace/blink/main/test_tasks/wheel_task.c
/var/home/aluno/workspace/blink/main/test_tasks/wheel_task.c: In function 'wheel_ctrl':
/var/home/aluno/workspace/blink/main/test_tasks/wheel_task.c:132:72: error: 'WHOLES_ENCODER_PPR' undeclared (first use in this function); did you mean 'WHEELS_ENCODER_PPR'?
  132 |         float metros_por_pulso = (2.0f * M_PI * WHELL_RADIUS) / (float)WHOLES_ENCODER_PPR;
      |                                                                        ^~~~~~~~~~~~~~~~~~
      |                                                                        WHEELS_ENCODER_PPR
/var/home/aluno/workspace/blink/main/test_tasks/wheel_task.c:132:72: note: each undeclared identifier is reported only once for each function it appears in
/var/home/aluno/workspace/blink/main/test_tasks/wheel_task.c: At top level:
/var/home/aluno/workspace/blink/main/test_tasks/wheel_task.c:10:20: warning: 'TAG' defined but not used [-Wunused-variable]
   10 | static const char *TAG = "WHEEL_TASK";
      |                    ^~~
[2/10] Performing build step for 'bootloader'
[1/1] cd /var/home/aluno/workspace/blink/build/bootloader/esp-idf/esptool_py && /usr/lib/sdk/esp-idf/tools/python_env/bin/python /usr/lib/sdk/esp-idf/idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /var/home/aluno/workspace/blink/build/bootloader/bootloader.bin
Bootloader binary size 0x5250 bytes. 0x2db0 bytes (36%) free.
ninja: build stopped: subcommand failed.
